Fix some spacing issues

--- a/assets/styles/layout/_footer.scss
+++ b/assets/styles/layout/_footer.scss
@@ -31,6 +31,7 @@
 
   @include md("medium") {
     column-count: 2;
+    column-gap: 0;
     grid-row: initial;
   }
 }
